--- a/package.json
+++ b/package.json
@@ -3,24 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 8000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "format-to-naira": "^1.0.5",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
+    "next": "14.2.5",
     "react": "^18",
+    "react-day-picker": "^9.0.4",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.1",
+    "react-loading": "^2.0.3",
+    "react-range-slider-input": "^3.0.7",
+    "react-search-box": "^3.0.0",
+    "react-select": "^5.8.0",
+    "react-toastify": "^10.0.5",
+    "sass": "^1.77.8",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
-  }
+    "typescript": "^5"
+  },
+  "proxy": "http://localhost:5000"
 }
