--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
     "format-to-naira": "^1.0.5",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
