Updated why we are unique

--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "format-to-naira": "^1.0.5",
@@ -37,5 +42,5 @@
     "postcss": "^8",
     "typescript": "^5"
   },
-    "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000"
 }
