--- a/package.json
+++ b/package.json
@@ -1,46 +1,56 @@
 {
-  "name": "varsity-market-frontend",
+  "name": "unimarket-frontend",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev -p 8000",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.6.0",
-    "@fortawesome/free-brands-svg-icons": "^6.6.0",
-    "@fortawesome/free-regular-svg-icons": "^6.6.0",
-    "@fortawesome/free-solid-svg-icons": "^6.6.0",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "axios": "^1.7.2",
-    "bootstrap": "^5.3.3",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
     "format-to-naira": "^1.0.5",
     "lodash": "^4.17.21",
-    "moment": "^2.30.1",
-    "next": "14.2.5",
-    "react": "^18",
-    "react-day-picker": "^9.0.4",
-    "react-dom": "^18",
-    "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.2.1",
+    "moment": "^2.29.4",
+    "react": "^18.2.0",
+    "react-day-picker": "^8.6.0",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.8.0",
     "react-loading": "^2.0.3",
     "react-range-slider-input": "^3.0.7",
+    "react-router-dom": "^6.9.0",
+    "react-scripts": "5.0.1",
     "react-search-box": "^3.0.0",
-    "react-select": "^5.8.0",
-    "react-toastify": "^10.0.5",
-    "sass": "^1.77.8",
-    "socket.io-client": "^4.7.5"
+    "react-select": "^5.7.2",
+    "react-toastify": "^9.1.2",
+    "react-uuid": "^2.0.0",
+    "sass": "^1.60.0",
+    "socket.io-client": "^4.6.1",
+    "web-vitals": "^2.1.4"
   },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5",
-    "postcss": "^8",
-    "typescript": "^5"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "proxy": "http://localhost:3001"
 }
