--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "unimarket-frontend",
+  "name": "varsity-market-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
